# Backend

./: .editorconfig  .env.example  .gitignore  Dockerfile  MAVIS.txt  Makefile  build.sh  certi_shape.txt  certi_test.py  client_steps.ipynb  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  zz.py  zz2.py
.github/workflows/: main_mavis-backend.yml  main_mavisbackend.yml
apps/base/: certificate.py  models.py  serializers.py  snh.py  urls.py  utils.py  views.py  watermark.py
apps/base/migrations/: 0001_initial.py
assets/excalidraw/: mavis-embed-secret-flow.excalidraw  mavis_secret_design.excalidraw
assets/manimations/illustrations/image-upload/: image_upload_process.py
assets/manimations/photo-auth-flow/: PhotoAuthenticationFlow.py  photo_authentication_flow.py
backend/: logging_utils.py  settings.py  urls.py
base/: admin.py  certificate.py  metadata.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py  watermark.py  watermark_stretch.py  watermark_topleft.py
base/migrations/: 0001_initial.py  0002_alter_image_image_hash.py  0002_image_mavis_cert_image_mavis_cert_hash.py  0003_image_original_image_hash.py  0004_remove_devicekeys_private_key_remove_devicekeys_user_and_more.py  0005_alter_devicekeys_uuid.py
scripts/: keys.sh  setup.sh
static/css/: landing.css
static/js/: landing.js
templates/: landing.html
