[project]
name = "mavis-backend"
version = "0.0.1"
description = ""
authors = [
    {name = "Omkar Wagholikar",email = "omkarrwagholikar@gmail.com"},
    {name = "Shantanu Wable",email = "shantanuwable2003@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cryptography (>=44.0.0,<45.0.0)",
    "django (>=5.1.5,<6.0.0)",
    "django-rest-framework (>=0.1.0,<0.2.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "pywavelets (>=1.8.0,<2.0.0)",
    "scipy (>=1.15.1,<2.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "pyqrcode (>=1.2.1,<2.0.0)",
    "piexif (>=1.1.3,<2.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "pyzbar (>=0.1.9,<0.2.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "pypng (>=0.20220715.0,<0.20220716.0)",
    "exif (>=1.6.1,<2.0.0)",
    "pytz (>=2025.1,<2026.0)",
    "gunicorn (>=23.0.0)",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ipykernel>=6.29.5",
    "ipython>=8.34.0",
    "pre-commit>=4.1.0",
    "requests>=2.32.3",
]
